resolved some bugs

--- a/EncDec.ipynb
+++ b/EncDec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/chess/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2286,7 @@
        "[3063 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2341,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2387,7 @@
        " 29847]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2389,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2399,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2438,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,16 +2456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_15594/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_18020/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
-      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_15594/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_18020/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n"
      ]
     },
@@ -2482,7 +2491,7 @@
        " 'game_id': tensor(1)}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2543,13 +2552,13 @@
     "        self.transformer_encoder = nn.TransformerEncoder(\n",
     "            nn.TransformerEncoderLayer(d_model=embed_size, nhead=16, dim_feedforward=embed_size * 4, dropout=0.08,\n",
     "                                      device=device), num_layers=5).to(device)\n",
-    "        self.mapper = nn.Linear(embed_size, 4 * embed_size).to(device)\n",
+    "        self.mapper = nn.Linear(embed_size, 768).to(device)\n",
     "        self.init_weights()\n",
     "\n",
     "    def forward(self, img_embedded, train_mode=False):\n",
     "        x = self.transformer_encoder(img_embedded)\n",
     "        x = self.mapper(x)\n",
-    "        x = x.view(*([-1, 4, self.embed_size] if train_mode else [4, self.embed_size]))\n",
+    "        x = x.view(*([-1, 1, 768] if train_mode else [1, 768]))\n",
     "        return x\n",
     "\n",
     "    def init_weights(self):\n",
@@ -2586,20 +2595,21 @@
     "    self.criterion = nn.CrossEntropyLoss(ignore_index=self.decoder.tokenizer.pad_token_id)\n",
     "\n",
     "  def train_forward(self, board, move_id, move_number, turn, comment,attention_mask):\n",
-    "    x , x_mask = comment[:-1].unsqueeze(0),attention_mask[:-1].unsqueeze(0)\n",
-    "    y = comment[1:].unsqueeze(0)\n",
+    "    x , x_mask = comment[:,:-1],attention_mask[:,:-1]\n",
+    "    y = comment[:,1:]\n",
     "    encoder_output = self.encoder(board, move_id, move_number, turn)\n",
     "    mapper_output = self.mapper(encoder_output,train_mode = True)\n",
     "    text_emb = self.decoder.decoder.transformer.wte(x)\n",
-    "    print(text_emb.shape,mapper_output.shape)\n",
+    "    print(text_emb.shape)\n",
+    "    # text_emb = text_emb.view(1,text_emb.shape[-2],text_emb.shape[-1])\n",
     "    x = torch.concat([mapper_output,text_emb],dim=1)\n",
-    "    x_mask = torch.concat([torch.ones(x_mask.shape[0],4),x_mask],dim=1)\n",
-    "    pos_emb = self.decoder.transformer.wpe(torch.arange(x.shape[1]))\n",
+    "    x_mask = torch.concat([torch.ones(x_mask.shape[0],1),x_mask],dim=1)\n",
+    "    pos_emb = self.decoder.decoder.transformer.wpe(torch.arange(x.shape[1]))\n",
     "    pos_emb = pos_emb.expand_as(x)\n",
     "    x = x+ pos_emb\n",
     "    res = self.decoder(x,attention_mask=x_mask)\n",
     "    res = torch.softmax(res,dim=2)\n",
-    "    loss = self.criterion(res[:,4:,:].reshape(-1,res.shape[-1]),y.shape(-1))\n",
+    "    loss = self.criterion(res[:,4:,:].reshape(-1,res.reshape[-1]),y.reshape(-1))\n",
     "    loss.backward()\n",
     "    self.optimizer.zero_grad()\n",
     "    return loss\n"
@@ -2607,26 +2617,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/abdulmk/opt/anaconda3/envs/chess/lib/python3.9/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
-      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_18020/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_18020/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_18020/2332892478.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  torch.tensor(move_number).view(-1, 1),\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 24]) torch.Size([1, 24])\n",
+      "torch.Size([1, 24, 768])\n",
+      "torch.Size([1, 25, 768])\n",
+      "torch.Size([1, 25, 768]) torch.Size([1, 25])\n",
+      "torch.Size([1, 25, 768]) torch.Size([1, 25])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m x , x_mask \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomment\u001b[39m\u001b[38;5;124m\"\u001b[39m][:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mattention_mask\u001b[39m\u001b[38;5;124m\"\u001b[39m][:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     14\u001b[0m y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomment\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m1\u001b[39m:]   \n\u001b[0;32m---> 15\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mboard\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmove\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmove_number\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mturn\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcomment\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mattention_mask\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[58], line 108\u001b[0m, in \u001b[0;36mChessCommentaryGenerator.train_forward\u001b[0;34m(self, board, move_id, move_number, turn, comment, attention_mask)\u001b[0m\n\u001b[1;32m    106\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdecoder(x,attention_mask\u001b[38;5;241m=\u001b[39mx_mask)\n\u001b[1;32m    107\u001b[0m res \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msoftmax(res,dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m--> 108\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcriterion(res[:,\u001b[38;5;241m4\u001b[39m:,:]\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m),y\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m    109\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
      ]
     }
    ],
@@ -2648,6 +2674,13 @@
     "    loss = model.train_forward(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"],data[\"attention_mask\"])\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
