--- a/EncDec_colab.ipynb
+++ b/EncDec_colab.ipynb
@@ -2117,27 +2117,23 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "filtered_df"
-      ],
+      "execution_count": 63,
       "metadata": {
-        "id": "hQEYen6V9CtZ",
-        "outputId": "55bfccf7-6747-45a8-b405-0c13fa82c49b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "hQEYen6V9CtZ",
+        "outputId": "55bfccf7-6747-45a8-b405-0c13fa82c49b"
       },
-      "execution_count": 63,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [Game Number, Move Number, Player, Move, Board, Comment]\n",
-              "Index: []"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "repr_error": "Out of range float values are not JSON compliant: nan",
+              "type": "dataframe",
+              "variable_name": "filtered_df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-751fb01c-6507-4ecf-b4e7-324202d9149e\" class=\"colab-df-container\">\n",
@@ -2253,15 +2249,19 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "filtered_df",
-              "repr_error": "Out of range float values are not JSON compliant: nan"
-            }
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [Game Number, Move Number, Player, Move, Board, Comment]\n",
+              "Index: []"
+            ]
           },
+          "execution_count": 63,
           "metadata": {},
-          "execution_count": 63
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "filtered_df"
       ]
     },
     {
@@ -2335,7 +2335,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[27,\n",
@@ -2369,8 +2368,9 @@
               " 29847]"
             ]
           },
+          "execution_count": 68,
           "metadata": {},
-          "execution_count": 68
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -2426,8 +2426,7 @@
         "            \"move_number\": torch.tensor(self.move_number[idx], dtype=torch.long),\n",
         "            \"game_id\": torch.tensor(self.game_id[idx], dtype=torch.long)\n",
         "        }\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
@@ -2453,8 +2452,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<ipython-input-70-37345417b085>:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
@@ -2463,7 +2462,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'board': tensor([[ 5,  7,  9, 11, 13,  9,  7,  5],\n",
@@ -2486,8 +2484,9 @@
               " 'game_id': tensor(576)}"
             ]
           },
+          "execution_count": 72,
           "metadata": {},
-          "execution_count": 72
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -2619,14 +2618,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "ICerwmGD1W1V"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2637,8 +2636,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
             "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n",
@@ -2651,8 +2650,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "10.777785301208496\n",
             "10.79138469696045\n",
@@ -3184,9 +3183,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -3212,7 +3211,7 @@
         "    x , x_mask = data[\"comment\"][:-1],data[\"attention_mask\"][:-1]\n",
         "    y = data[\"comment\"][1:]\n",
         "    loss = model.train_forward(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"],data[\"attention_mask\"])\n",
-        "    print(loss.item())"
+        "    print('loss:', loss.item())"
       ]
     },
     {
@@ -3235,6 +3234,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -3250,12 +3254,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.18"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
