updated placeholder string

--- a/EncDec_colab.ipynb
+++ b/EncDec_colab.ipynb
@@ -2272,7 +2272,7 @@
       },
       "outputs": [],
       "source": [
-        "df['Comment'] = df['Comment'].fillna('')\n"
+        "df['Comment'] = df['Comment'].fillna('')"
       ]
     },
     {
