--- a/processing.ipynb
+++ b/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,178 +279,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read as df limit 1000\n",
-    "df = pd.read_csv('linares_2002.csv', nrows=1000)"
+    "df = pd.read_csv('combined.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Game Number</th>\n",
-       "      <th>Move Number</th>\n",
-       "      <th>Player</th>\n",
-       "      <th>Move</th>\n",
-       "      <th>Comment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>White</td>\n",
-       "      <td>e4 e6</td>\n",
-       "      <td>Now, along with Pe4 there is an indication Bla...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>d4 d5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Nc3 Bb4</td>\n",
-       "      <td>Winawer Variation -- by pinning Nc3 Black keep...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>e5 c5</td>\n",
-       "      <td>Black attacks in a most natural way, though he...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>White</td>\n",
-       "      <td>a3 Bxc3+</td>\n",
-       "      <td>This is a saving grace which helps White strai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>26</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Rb3 Ra1</td>\n",
-       "      <td>If both sides throw everything they've got int...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>26</td>\n",
-       "      <td>27</td>\n",
-       "      <td>White</td>\n",
-       "      <td>h3 Re5</td>\n",
-       "      <td>Qd1 is overworked defending both Bc1 and Nd5, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>26</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Nf4 Qe8</td>\n",
-       "      <td>threatening ...Re5-e1 to win Bc1 and probably ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>26</td>\n",
-       "      <td>29</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Rf3 c4</td>\n",
-       "      <td>a tricky defense which continues the effort to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>26</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Kh2 b3</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Game Number  Move Number Player      Move  \\\n",
-       "0              1            1  White     e4 e6   \n",
-       "1              1            2  Black     d4 d5   \n",
-       "2              1            3  White   Nc3 Bb4   \n",
-       "3              1            4  Black     e5 c5   \n",
-       "4              1            5  White  a3 Bxc3+   \n",
-       "..           ...          ...    ...       ...   \n",
-       "995           26           26  Black   Rb3 Ra1   \n",
-       "996           26           27  White    h3 Re5   \n",
-       "997           26           28  Black   Nf4 Qe8   \n",
-       "998           26           29  White    Rf3 c4   \n",
-       "999           26           30  Black    Kh2 b3   \n",
-       "\n",
-       "                                               Comment  \n",
-       "0    Now, along with Pe4 there is an indication Bla...  \n",
-       "1                                                  NaN  \n",
-       "2    Winawer Variation -- by pinning Nc3 Black keep...  \n",
-       "3    Black attacks in a most natural way, though he...  \n",
-       "4    This is a saving grace which helps White strai...  \n",
-       "..                                                 ...  \n",
-       "995  If both sides throw everything they've got int...  \n",
-       "996  Qd1 is overworked defending both Bc1 and Nd5, ...  \n",
-       "997  threatening ...Re5-e1 to win Bc1 and probably ...  \n",
-       "998  a tricky defense which continues the effort to...  \n",
-       "999                                                NaN  \n",
-       "\n",
-       "[1000 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81.60295880834806\n"
+     ]
     }
    ],
    "source": [
-    "df"
+    "print(df['Comment'].isna().sum() / len(df) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Comment'] = df['Comment'].fillna('This move is not enough for a comment')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Comment'].isna().sum() / len(df) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save to csv\n",
+    "df.to_csv('combined.csv', index=False)"
    ]
   },
   {
