--- a/EncDec.ipynb
+++ b/EncDec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/chess/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2277,7 @@
        "[3063 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,16 +2288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Comment'] = df['Comment'].fillna('')\n"
+    "df['Comment'] = df['Comment'].fillna('This move is not enough for a comment')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2329,13 +2320,12 @@
     "    return board_array\n",
     "\n",
     "# Example usage:\n",
-    "board_states = df[\"Board\"].apply(lambda x : create_board_array(x))\n",
-    "\n"
+    "board_states = df[\"Board\"].apply(lambda x : create_board_array(x))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2377,7 @@
        " 29847]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2398,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,16 +2446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_12245/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_5178/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
-      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_12245/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_5178/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n"
      ]
     },
@@ -2491,7 +2481,7 @@
        " 'game_id': tensor(1)}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2589,7 @@
     "    mapper_output = self.mapper(encoder_output,train_mode = True)\n",
     "    text_emb = self.decoder.decoder.transformer.wte(x)\n",
     "    # print(text_emb.shape)\n",
-    "    # text_emb = text_emb.view(1,text_emb.shape[-2],text_emb.shape[-1])\n",
+    "    text_emb = text_emb.view(1,text_emb.shape[-2],text_emb.shape[-1])\n",
     "    x = torch.concat([mapper_output,text_emb],dim=1)\n",
     "    x_mask = torch.concat([torch.ones(x_mask.shape[0],1),x_mask],dim=1)\n",
     "    pos_emb = self.decoder.decoder.transformer.wpe(torch.arange(x.shape[1]))\n",
@@ -2615,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2624,12 +2614,12 @@
      "text": [
       "/opt/anaconda3/envs/chess/lib/python3.9/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
       "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n",
-      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_12245/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_5178/4154532718.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"comment\": torch.tensor(tokens, dtype=torch.long),\n",
-      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_12245/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_5178/4154532718.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  \"attention_mask\": torch.tensor(attention_mask, dtype=torch.long),\n",
       "[W NNPACK.cpp:64] Could not initialize NNPACK! Reason: Unsupported hardware.\n",
-      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_12245/834492023.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/0m/w44xn8w50rj37plvq1gm5kpm0000gn/T/ipykernel_5178/785788271.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(move_number).view(-1, 1),\n"
      ]
     },
@@ -2660,16 +2650,8 @@
     "        \n",
     "    x , x_mask = data[\"comment\"][:-1],data[\"attention_mask\"][:-1]\n",
     "    y = data[\"comment\"][1:]   \n",
-    "    loss = model.train_forward(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"],data[\"attention_mask\"])\n",
-    "    "
+    "    loss = model.train_forward(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"], data[\"comment\"],data[\"attention_mask\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
